index.css
body {
    font-family: 'Poppins', Arial, Tahoma, Helvetica, sans-serif;
    text-align: center;
  }

  #navbar {
    z-index: 1;
    height: 80px;
  }
  
  nav ul li a {
    color: #eee;
    text-decoration: none;
    font-size: 25px;
    font-weight: bold;
  }
  
  li a:hover {
    color: #ff533c;
    transition-duration: .7s;
  }
  
  nav ul li {
    display: inline-block;
    margin: 21px;
    margin-bottom: 25px;
    margin-top: 23px;
  }
  
  nav ul {
    text-align: center;
    position: fixed;
    width: 100%;
    background-color: black;
    /*background-image: linear-gradient(#0099ff, #0044ee);*/
  }
  
  .intro {
    background-image: url("https://jcdarocha.fr/wp-content/uploads/2014/08/thadeus-mokup-macbook.jpg");
    background-repeat:no-repeat;
    -webkit-background-size:cover;
    -moz-background-size:cover;
    -o-background-size:cover;
    background-size:cover;
    background-position:center;
   /* background: #008099;*/
    min-height: 55vh;
    padding-top: 20vh;
    padding-bottom: 40vh;
    font-size: 28px;
  }

  #pro-pic {
    border-radius: 50%;
    border: 10px solid black;
  }
  
  #my-box {
    margin: auto 25px;
    border-radius: 90px;
    min-height: 130px;
    padding: 20px 0px 10px 0px;
    background-color: rgba(27, 27, 27, 0.911);
    color: white;
  }

  * {
    margin: 0;
    padding: 0;
  }

  #about {
    background-image: url("https://images.pexels.com/photos/908298/pexels-photo-908298.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
    background-repeat:no-repeat;
    -webkit-background-size:cover;
    -moz-background-size:cover;
    -o-background-size:cover;
    background-size:cover;
    background-position:center;
   /* background: #008099;*/
    min-height: 55vh;
    padding-top: 20vh;
    padding-bottom: 20vh;
  }

  #about-me {
    margin: auto 65px;
    border-radius: 1px;
    min-height: 130px;
    padding: 20px 30px 30px 30px;
    background-color: rgba(27, 27, 27, 0.911);
    color: white;
    text-align: left;
  }

  #about-me img {
    background-color: black;
  }
  
  #about-me h2{
    padding: 20px;
    font-size: 30px;
  }

  #about-me h3 {
    font-size: 30px;
    line-height: 1.3;
    padding: 0px 30px;
  }

  #about-me button {
    font-size: 30px;
    font-weight: bold;
    margin-left: 30px;
    padding: 10px 25px;
    color: rgb(255, 255, 255);
    background-color: rgb(0, 0, 0);
    border: none;
    border-radius: 10%;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
  }

  #about-me button:hover {
    background-color: rgb(255, 250, 250);
    color: black;
    transition-duration: .4s;
  }

  #language-gallery {
    display: inline-block;
    width: 100%;
    height: 300px;
    background-image: linear-gradient(rgb(255, 77, 32), #e9a136);
    font-size: 24px;
    padding: 40px 0;
    color: #000;
  }

  #languages {
    margin: 30px 0 10px 0;
    padding: 20px 0;
  }

  #languages i {
    margin-top: 60px;
    margin-left: 800px;
    opacity: 0;
    animation: fader 3s infinite;
  }

  @keyframes fader {
    0% {margin-left: 1000px; opacity: 0;}
    10% {opacity: 0.01;}
    40% {margin-left: 20px; opacity: 1;}
    60% {margin-left: 20px; opacity: 1;}
    90% {opacity: 0.01;}
    100% {margin-left: -1000px; opacity: 0;}
  }
  
  hr {
    border: 2px solid black;
  }

  #home-pro{
    font-size: 25px;
    min-height: 35vh;
    padding-top: 10vh;
    padding-bottom: 5vh;
  }

  #project-back {
    margin: 50px 20px;
    border-radius: 1px;
    min-height: 130px;
    position: relative;
  }

  .project-pic {
    position: relative;
    padding: 10px 10px;
    margin: 30px 0px;
    display: inline-block;
  }

  .project-pic button {
    background-color: rgb(0, 0, 0);
    border: none;
    border-radius: 10%;
    color: white;
    padding: 10px 25px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    cursor: pointer;
  }

  .project-pic button:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
    transition-duration: .7s;
  }

  .project-pic button:active {
    background-color: #ff1e00;
    transition-duration: 2s;
    box-shadow: none;
    animation: shake 0.6s; 
    animation-iteration-count: infinite; 
    animation-delay: 0.6s;
  }

  @keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
  }

  button:focus {outline:0;}

  .project-pic img {
    height: 250px;
    border-radius: 5%;
    max-width: auto;
    padding-left: 5px;
    display: inline-block;
  }

  .overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 245px;
    margin-left: 15px;
    margin-right: 10px;
    margin-top: 8px;
    border-radius: 5%;
    max-width: auto;
    opacity: 0;
    transition: .5s ease;
    background-image: linear-gradient(rgb(255, 66, 19), #e9a136);
    display: inline-block;
    border: 4px black solid;
  }

  .project-pic:hover .overlay{
    opacity: 1;
  }

  .text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
    width: 100%;
  }

  .text p {
    color: rgb(0, 0, 0);
    font-size: 20px;
  }
/* ... */

